fix(lint): ts, css and scss new rules and fixes

--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -1,4 +1,4 @@
-@use '../styles/constants' as c;
+@use "../styles/constants" as c;
 
 .wrapperCentered {
   display: flex;
@@ -21,6 +21,7 @@
   // this should never be possible to override, this is only for storybook purpose - visual regression testing
   opacity: 0.5 !important;
 }
+
 .typographyBodySmall {
   @include c.typographyBodySmall;
 }
