--- a/packages/ui/src/EmptyState.module.scss
+++ b/packages/ui/src/EmptyState.module.scss
@@ -1,4 +1,4 @@
-@use '../styles/constants' as c;
+@use "../styles/constants" as c;
 
 .container {
   display: flex;
@@ -10,7 +10,8 @@
   .content {
     .title {
       margin: c.$grid * 4.5 0 0 0;
-      @include c.typographyBodyNormal('bold' !important);
+
+      @include c.typographyBodyNormal("bold" !important);
     }
 
     .description {
@@ -67,7 +68,7 @@
       .title {
         margin: 0;
 
-        @include c.typographyBodyNormal('bold' !important);
+        @include c.typographyBodyNormal("bold" !important);
       }
 
       .description {
