--- a/packages/ui/src/RadioGroup.module.scss
+++ b/packages/ui/src/RadioGroup.module.scss
@@ -1,6 +1,5 @@
-@use '../styles/constants' as c;
-@use '../styles/helpers' as h;
-
+@use "../styles/constants" as c;
+@use "../styles/helpers" as h;
 @include h.withError;
 
 .radioGroup {
