--- a/packages/ui/styles/constants/_index.scss
+++ b/packages/ui/styles/constants/_index.scss
@@ -1,5 +1,5 @@
-@forward './animations.scss';
-@forward './colors.scss';
-@forward './sizes.scss';
-@forward './typography.scss';
-@forward './stackingContext.scss';
+@forward "./animations.scss";
+@forward "./colors.scss";
+@forward "./sizes.scss";
+@forward "./typography.scss";
+@forward "./stackingContext.scss";
