--- a/packages/ui/styles/helpers/_index.scss
+++ b/packages/ui/styles/helpers/_index.scss
@@ -1,4 +1,4 @@
-@forward './a11y';
-@forward './input';
-@forward './text';
-@forward './error';
+@forward "./a11y";
+@forward "./input";
+@forward "./text";
+@forward "./error";
