--- a/packages/ui/__stories__/TextField.stories.module.scss
+++ b/packages/ui/__stories__/TextField.stories.module.scss
@@ -1,10 +1,10 @@
-@use '../styles/constants' as c;
+@use "../styles/constants" as c;
 
 .field {
   margin-bottom: 16px;
 }
 
-.shortField {
+.short-field {
   width: c.$grid * 25;
   margin-bottom: 16px;
 }
