--- a/packages/ui/src/AutocompleteField.module.scss
+++ b/packages/ui/src/AutocompleteField.module.scss
@@ -1,10 +1,9 @@
-@use '../styles/constants' as c;
-@use '../styles/helpers' as h;
+@use "../styles/constants" as c;
+@use "../styles/helpers" as h;
 
 $selectHorizontalPadding: c.$grid * 3;
 $menuMargin: c.$grid * 3;
-
-$select: ':global .hz-autocomplete-field__control';
+$select: ":global .hz-autocomplete-field__control";
 
 .container {
   .label {
@@ -127,6 +126,7 @@ $select: ':global .hz-autocomplete-field__control';
       line-height: c.$grid * 8;
       padding: 0 $selectHorizontalPadding;
       background-color: transparent;
+
       // Do not remove outline for high-contrast modes
       // https://stackoverflow.com/a/52616313
       outline: c.$outlineWidth solid transparent;
