--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -1,4 +1,4 @@
-@use '../styles/constants' as c;
+@use "../styles/constants" as c;
 
 .wrapper {
   $padding: c.$grid * 5;
@@ -9,7 +9,7 @@
   background: c.$colorNeutralWhite;
 
   .heading {
-    @include c.typographyH3();
+    @include c.typographyH3;
 
     display: flex;
     align-items: center;
