--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -1,6 +1,5 @@
-@use '../styles/constants' as c;
-@use '../styles/helpers' as h;
-
+@use "../styles/constants" as c;
+@use "../styles/helpers" as h;
 @include h.withError;
 
 .wrapper {
@@ -37,6 +36,7 @@
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$grid;
     color: c.$colorNeutralWhite;
+
     // because of ~ and + selectors used below, we need to keep the current order in DOM and
     // fix it visually with order property
     order: -1;
@@ -58,7 +58,7 @@
     }
   }
 
-  input[aria-checked='mixed'] ~ .checkmark {
+  input[aria-checked="mixed"] ~ .checkmark {
     background-color: c.$colorPrimaryLight;
     border-color: c.$colorPrimaryLight;
   }
