--- a/packages/ui/src/CodeEditor.module.scss
+++ b/packages/ui/src/CodeEditor.module.scss
@@ -1,15 +1,17 @@
-@use '../styles/constants' as c;
-@use '../styles/helpers' as h;
+@use "../styles/constants" as c;
+@use "../styles/helpers" as h;
 
 .container {
   box-shadow: 0 c.$cardShadowSize c.$cardShadowBlur 0 c.$colorShadow;
   border-radius: c.$borderRadius;
+
   :global .cm-editor {
     // bogus padding to avoid overlapping with our outlineFormField mixin.
     padding: 1px;
     border-radius: c.$borderRadius;
     border: c.$borderWidth solid c.$colorNeutralLight;
   }
+
   :global .cm-editor.cm-focused {
     // inherited outline just looks weird, override it
     outline: none;
@@ -19,6 +21,7 @@
 
     border: c.$borderWidth solid c.$colorAccessibilityOutline;
   }
+
   :global .cm-scroller {
     border-radius: c.$borderRadius;
   }
