--- a/packages/ui/src/InteractiveList.module.scss
+++ b/packages/ui/src/InteractiveList.module.scss
@@ -1,4 +1,4 @@
-@use '../styles/constants' as c;
+@use "../styles/constants" as c;
 
 $addIconSpacing: c.$grid;
 
@@ -14,6 +14,7 @@ $addIconSpacing: c.$grid;
     color: c.$colorPrimary;
     height: c.$inputHeight - $addIconSpacing;
     width: c.$inputHeight - $addIconSpacing;
+
     // label (1rem * 1.4 line-height) + margin-bottom of a label
     margin-top: c.$grid * 7;
   }
