--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -2,34 +2,25 @@
 $colorPrimaryLight: #2d7de4 !default;
 $colorPrimary: #2160c0 !default;
 $colorPrimaryDark: #003b87 !default;
-
 $colorNeutralWhite: #fff !default;
 $colorNeutralLighter: #fafafa !default;
 $colorNeutralLight: #b7c1cb !default;
 $colorNeutral: #dbdbdb !default;
-
 $colorSuccessLight: #68c200 !default;
 $colorSuccess: #008a00 !default;
 $colorSuccessDark: #005c09 !default;
-
 $colorInfoLight: #cbdbff !default;
 $colorInfo: #87a7ee !default;
 $colorInfoDark: #4a71c4 !default;
-
 $colorWarningLight: #f9b721 !default;
 $colorWarning: #f47027 !default;
 $colorWarningDark: #ad6200 !default;
-
 $colorErrorLight: #e75851 !default;
 $colorError: #b00020 !default;
 $colorErrorDark: #891b15 !default;
-
 $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
-
 $colorOverlayBackground: #f2f5f9 !default;
-
 $colorAccessibilityOutline: #9648bd !default;
-
-$colorShadow: rgba(53, 61, 73, 0.2) !default;
+$colorShadow: rgb(53 61 73 / 20%) !default;
