--- a/packages/ui/styles/helpers/_a11y.scss
+++ b/packages/ui/styles/helpers/_a11y.scss
@@ -1,4 +1,4 @@
-@use '../constants' as c;
+@use "../constants" as c;
 
 @mixin outlineSimple {
   box-shadow: inset 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
@@ -10,7 +10,9 @@
 
 @mixin outlineFormField {
   border-color: c.$colorAccessibilityOutline;
-  // Border is also colored with the a11y color. We need to make the total visible outline width c.$outlineWidth, including the border
+
+  // Border is also colored with the a11y color. We need to make the total visible outline width c.$outlineWidth,
+  // including the border
   box-shadow: inset 0 0 0 (c.$outlineWidth - c.$borderWidth) c.$colorAccessibilityOutline;
 
   // Do not remove outline for high-contrast modes
@@ -29,6 +31,7 @@
   overflow: hidden;
   border: 0;
   white-space: nowrap;
+
   // Without explicit top and left it causes rendering a scrollbar
   top: 1px;
   left: 1px;
