--- a/packages/ui/styles/helpers/_input.scss
+++ b/packages/ui/styles/helpers/_input.scss
@@ -3,7 +3,7 @@
   /* doiuse-disable css-appearance */
   appearance: menulist-button;
   /* doiuse-enable css-appearance */
-  background-color: rgb(232, 240, 254) !important;
+  background-color: rgb(232 240 254) !important;
   background-image: none !important;
   color: -internal-light-dark(black, white) !important;
 }
