--- a/packages/ui/src/Select/Common.module.scss
+++ b/packages/ui/src/Select/Common.module.scss
@@ -1,5 +1,5 @@
-@use "../../styles/constants" as c;
-@use "../../styles/helpers" as h;
+@use '../../styles/constants' as c;
+@use '../../styles/helpers' as h;
 
 $selectHorizontalPadding: c.$grid * 3;
 
