--- a/packages/ui/styles/constants/export.module.scss
+++ b/packages/ui/styles/constants/export.module.scss
@@ -1,5 +1,5 @@
-@use "sass:meta";
-@use "." as c;
+@use 'sass:meta';
+@use '.' as c;
 
 :export {
   @each $name, $value in meta.module-variables(c) {
