--- a/packages/ui/src/PasswordField.module.scss
+++ b/packages/ui/src/PasswordField.module.scss
@@ -1,4 +1,4 @@
-@use "../styles/constants" as c;
+@use '../styles/constants' as c;
 
 $buttonMargin: c.$grid * 2;
 $inputMargin: c.$iconSizeSmall + $buttonMargin * 2;
