--- a/packages/ui/styles/fonts.css
+++ b/packages/ui/styles/fonts.css
@@ -3,14 +3,10 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 300;
-  src: url("../fonts/roboto-v27-latin-300.eot"); /* IE9 Compat Modes */
-  src:
-    local(""),
-    url("../fonts/roboto-v27-latin-300.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto-v27-latin-300.woff2") format("woff2"),
-    url("../fonts/roboto-v27-latin-300.woff") format("woff"),
-    url("../fonts/roboto-v27-latin-300.ttf") format("truetype"),
-    url("../fonts/roboto-v27-latin-300.svg#Roboto") format("svg"); /* Legacy iOS */
+  src: url('../fonts/roboto-v27-latin-300.eot'); /* IE9 Compat Modes */
+  src: local(''), url('../fonts/roboto-v27-latin-300.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v27-latin-300.woff2') format('woff2'), url('../fonts/roboto-v27-latin-300.woff') format('woff'),
+    url('../fonts/roboto-v27-latin-300.ttf') format('truetype'), url('../fonts/roboto-v27-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-regular - latin */
@@ -18,14 +14,10 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-v27-latin-regular.eot"); /* IE9 Compat Modes */
-  src:
-    local(""),
-    url("../fonts/roboto-v27-latin-regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto-v27-latin-regular.woff2") format("woff2"),
-    url("../fonts/roboto-v27-latin-regular.woff") format("woff"),
-    url("../fonts/roboto-v27-latin-regular.ttf") format("truetype"),
-    url("../fonts/roboto-v27-latin-regular.svg#Roboto") format("svg"); /* Legacy iOS */
+  src: url('../fonts/roboto-v27-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''), url('../fonts/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v27-latin-regular.woff2') format('woff2'), url('../fonts/roboto-v27-latin-regular.woff') format('woff'),
+    url('../fonts/roboto-v27-latin-regular.ttf') format('truetype'), url('../fonts/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-500 - latin */
@@ -33,12 +25,8 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/roboto-v27-latin-500.eot"); /* IE9 Compat Modes */
-  src:
-    local(""),
-    url("../fonts/roboto-v27-latin-500.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/roboto-v27-latin-500.woff2") format("woff2"),
-    url("../fonts/roboto-v27-latin-500.woff") format("woff"),
-    url("../fonts/roboto-v27-latin-500.ttf") format("truetype"),
-    url("../fonts/roboto-v27-latin-500.svg#Roboto") format("svg"); /* Legacy iOS */
+  src: url('../fonts/roboto-v27-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''), url('../fonts/roboto-v27-latin-500.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/roboto-v27-latin-500.woff2') format('woff2'), url('../fonts/roboto-v27-latin-500.woff') format('woff'),
+    url('../fonts/roboto-v27-latin-500.ttf') format('truetype'), url('../fonts/roboto-v27-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
 }
