feat* Table persistent state feat* Table columns ordering

--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -12,3 +12,19 @@
     margin-top: c.$grid * 8;
   }
 }
+
+.content {
+  position: relative;
+}
+
+.overlayLoading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255 255 255 / 50%);
+}
