--- a/packages/ui/src/Table/Header.module.scss
+++ b/packages/ui/src/Table/Header.module.scss
@@ -59,6 +59,12 @@
     &.alignCenter {
       justify-content: center;
     }
+
+    &[draggable='true'] {
+      /* doiuse-disable css3-cursors-newer */
+      cursor: grabbing;
+      /* doiuse-enable css3-cursors-newer */
+    }
   }
 }
 
@@ -89,4 +95,8 @@
   &:hover .separator {
     background-color: c.$colorPrimary;
   }
+}
+
+.dragOver {
+  @include h.outlineSimple;
 }
