--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/constants' as c;
+@use '../../styles/helpers' as h;
 
 .container {
   display: block;
@@ -27,4 +28,10 @@
   align-items: center;
   justify-content: center;
   background: rgb(255 255 255 / 50%);
+}
+
+.expander {
+  &:focus {
+    @include h.outlineSimple;
+  }
 }
