--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/constants' as c;
+@use '../../styles/helpers' as h;
 
 .container {
   display: block;
@@ -10,5 +11,27 @@
 
   .empty {
     margin-top: c.$grid * 8;
+  }
+}
+
+.content {
+  position: relative;
+}
+
+.overlayLoading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255 255 255 / 50%);
+}
+
+.expander {
+  &:focus {
+    @include h.outlineSimple;
   }
 }
