--- a/packages/ui/src/Calendar/CalendarRange.module.scss
+++ b/packages/ui/src/Calendar/CalendarRange.module.scss
@@ -5,6 +5,11 @@
   flex-direction: row;
   align-items: flex-end;
 
+  &.vertical {
+    flex-direction: column;
+    gap: c.$grid * 4;
+  }
+
   .arrowRight {
     color: c.$colorNeutralLight;
     margin: 0 c.$grid * 2 c.$grid * 2;
