update(fe): add brand colored button

--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -23,4 +23,5 @@ $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
 $colorOverlayBackground: #f2f5f9 !default;
 $colorAccessibilityOutline: #9648bd !default;
+$colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
