--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -160,6 +160,30 @@
         @include disabledButtonColor;
       }
     }
+
+    &Brand {
+      @include buttonColor(c.$colorBrand);
+
+      &:hover,
+      &.hover,
+      &:focus,
+      &.focus {
+        @include buttonColor(lighten(c.$colorBrand, 20%));
+      }
+
+      &:active,
+      &.active {
+        @include buttonColor(darken(c.$colorBrand, 10%));
+      }
+
+      &.variantContained {
+        color: c.$colorNeutralWhite;
+      }
+
+      &:disabled {
+        @include disabledButtonColor;
+      }
+    }
   }
 
   &.variant {
