--- a/packages/ui/docs/Intro/Intro.module.scss
+++ b/packages/ui/docs/Intro/Intro.module.scss
@@ -1,3 +1,57 @@
-.logoSection {
+@use '../../styles/constants' as c;
+
+body {
+  color: c.$colorText;
+
+  @include c.typographyGlobal();
+}
+
+.subheading {
+  margin: 0 0 20px;
+  @include c.typographyH2();
+}
+
+.paragraphHeading {
+  font-weight: 400;
+  @include c.typographyH3();
+}
+
+.paragraph {
+  margin: 0 0 20px;
+}
+
+.logoContainer {
   background-image: url('../../assets/images/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainContainer {
+  padding: 40px 60px;
+  max-width: 1200px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 20px;
+}
+
+.cardLink {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+}
+
+.linkImg {
+  height: 90px;
+  width: auto;
 }
