--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -14,24 +14,12 @@
   }
 }
 
-.content {
-  position: relative;
-}
-
-.overlayLoading {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgb(255 255 255 / 50%);
-}
-
 .expander {
   &:focus {
     @include h.outlineSimple;
   }
+}
+
+.hotKeys {
+  outline: none;
 }
