--- a/packages/ui/src/Table/TableContent.module.scss
+++ b/packages/ui/src/Table/TableContent.module.scss
@@ -1,5 +1,21 @@
+.content {
+  position: relative;
+}
+
 .subRowWrapper {
   &:focus {
     outline: none;
   }
+}
+
+.overlayLoading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255 255 255 / 50%);
 }
