update(ui): colored checkbox

--- a/packages/ui/__stories__/Checkbox.stories.module.scss
+++ b/packages/ui/__stories__/Checkbox.stories.module.scss
@@ -1,5 +1,6 @@
 .redLabel {
   .redCheckmark {
+    color: blue;
   }
 
   & > input:checked ~ .redCheckmark {
@@ -9,6 +10,7 @@
 
 .blueLabel {
   .blueCheckmark {
+    color: red;
   }
 
   & > input:checked ~ .blueCheckmark {
