--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -66,7 +66,7 @@
       margin-bottom: c.$grid * 9;
       padding: 0 c.$grid * 21; // close button width
 
-      @media only screen and (max-width: 640px) {
+      @media only screen and (width <= 640px) {
         padding: 0 $iconSize;
 
         .closeText {
